syntax = "proto3";
import "ft_settings.data.proto";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.ft_settings;

service FtSettings {
	rpc GetLicenses(GetLicensesRequest) returns (GetLicensesResponse);
	rpc ApplyLicenses(ApplyLicensesRequest) returns(ApplyLicensesResponse);

  rpc UpdateNotificationSettings(UpdateNotificationSettingsRequest) returns (UpdateNotificationSettingsResponse);
  rpc GetNotificationSettings(GetNotificationSettingsRequest) returns(GetNotificationSettingsResponse);
  rpc TestEmailServerSettings(TestEmailServerSettingsRequest) returns(TestEmailServerSettingsResponse);
  rpc TestTrapReceiverSettings(TestTrapReceiverSettingsRequest) returns(TestTrapReceiverSettingsResponse);

  rpc GetLogBundle (GetLogBundleRequest) returns (GetLogBundleResponse);
}

message GetLogBundleRequest {}

message GetLogBundleResponse {
	bytes archive = 1;
}

// GetLicenses
message GetLicensesRequest {}

message GetLicensesResponse {
	repeated ft_settings.data.License licenses = 1;
}

// ApplyLicenses
message ApplyLicensesRequest{
	ft_settings.data.License license = 1;
}

message ApplyLicensesResponse{}

// UpdateNotificationSettings
message UpdateNotificationSettingsRequest {
	ft_settings.data.NotificationSettings notificationSettings = 1;
}

message UpdateNotificationSettingsResponse {}

// GetNotificationSettings
message GetNotificationSettingsRequest {}

message GetNotificationSettingsResponse {
	ft_settings.data.NotificationSettings notificationSettings = 1;
}

// TestEmailServerSettings
message TestEmailServerSettingsRequest {
	ft_settings.data.EmailServer emailServer = 1;
}

message TestEmailServerSettingsResponse {}

// TestTrapReceiverSettings
message TestTrapReceiverSettingsRequest {
	ft_settings.data.TrapReceiver trapReceiver = 1;
}

message TestTrapReceiverSettingsResponse {}


